--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@babel/plugin-proposal-export-default-from": "^7.14.5",
     "@types/express": "^4.17.13",
     "@types/react": "17.0.31",
+    "autoprefixer": "^10.3.7",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.17",
     "typescript": "4.4.4"
   }
 }
