--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongodb": "4.1.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.14.5",
